# gitsense

./: Cargo.toml  LICENSE  README.md  Shuttle.toml
.github/workflows/: ci.yml
demo/: driver.py  gitsense-demo.cast  run-demo.sh
src/: http.rs  lib.rs  main.rs
src/git/: blame.rs  history.rs  mod.rs
src/graph/: mod.rs
src/index/: mod.rs  model.rs  parse.rs  walk.rs
src/tools/: mod.rs  params.rs
tests/: call_graph.rs  churn_cache.rs  dead_code.rs  indented_pub.rs  index_build.rs  method_calls.rs  multiline.rs  name_collision.rs  symbol_kinds.rs
tests/fixtures/collision/: code.rs
tests/fixtures/collision_calls/: a.rs  b.rs
tests/fixtures/dead_code/: ghost.rs
tests/fixtures/diamond/: code.rs
tests/fixtures/indented_pub/: code.rs
tests/fixtures/kinds/: code.rs
tests/fixtures/method_calls/: code.rs
tests/fixtures/multiline/: code.rs
tests/fixtures/recursive/: recurse.rs
